--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,12 @@
     "hosting": {
         "site": "kalendarz-wydarzen",
         "public": "dist",
-        "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+        "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
+        ]
     }
 }
