--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
